<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<name>WRDZ</name>
	<organization>
		<name>Poznan Supercomputing and Networking Center</name>
		<url>http://www.psnc.pl/</url>
	</organization>
	<groupId>pl.psnc.synat</groupId>
	<artifactId>wrdz</artifactId>
	<version>1.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<licenses>
		<license>
			<name>GNU General Public License, Version 3.0</name>
			<url>http://www.gnu.org/licenses/gpl-3.0.txt</url>
		</license>
	</licenses>
	<scm>
		<connection>scm:git:https://github.com/psnc-dl/darceo.git</connection>
		<developerConnection>scm:git:git@github.com:psnc-dl/darceo.git</developerConnection>
		<url>http://github.com/psnc-dl/darceo/tree/master/wrdz</url>
	</scm>
	<distributionManagement>
		<repository>
			<id>synat-a11-releases-public</id>
			<uniqueVersion>false</uniqueVersion>
			<url>http://maven.man.poznan.pl/repository/synat-a11-releases-public</url>
		</repository>
		<snapshotRepository>
			<id>synat-a11-snapshots-public</id>
			<uniqueVersion>false</uniqueVersion>
			<url>http://maven.man.poznan.pl/repository/synat-a11-snapshots-public/</url>
		</snapshotRepository>
	</distributionManagement>
	<modules>
		<module>wrdz-persistence</module>
		<module>wrdz-common</module>
		<module>wrdz-zu</module>
		<module>wrdz-ru</module>
		<module>wrdz-zmd</module>
		<module>wrdz-mdz</module>
		<module>wrdz-zmkd</module>
		<module>wrdz-ms</module>
		<module>wrdz-ear</module>
	</modules>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<glassfish.version>3.1.2</glassfish.version>
		<junit.version>4.8.2</junit.version>
		<slf4j.version>1.6.1</slf4j.version>
		<commons-codec.version>1.6</commons-codec.version>
		<commons-configuration.version>1.6</commons-configuration.version>
		<commons-io.version>2.0.1</commons-io.version>
		<commons-lang.version>2.4</commons-lang.version>
		<commons-net.version>3.0.1</commons-net.version>
		<commons-jexl.version>2.1.1</commons-jexl.version>
		<jsch.version>0.1.51</jsch.version>
		<httpclient.version>4.2.2</httpclient.version>
		<httpmime.version>4.2.2</httpmime.version>
		<javaxmail.version>1.4.4</javaxmail.version>
		<devicemap-simpleddr.version>1.1.0-SNAPSHOT</devicemap-simpleddr.version>
		<devicemap-data.version>1.0.2</devicemap-data.version>
		<org.richfaces.bom.version>4.3.2.Final</org.richfaces.bom.version>
		<owlapi.version>3.4.2</owlapi.version>
		<dsa.version>1.0.1-SNAPSHOT</dsa.version>
		<sra.version>1.0.1-SNAPSHOT</sra.version>
		<wrdz.version>1.0.1-SNAPSHOT</wrdz.version>
		<!-- default values -->
		<ejb.address.mdz />
		<ejb.address.ru />
		<ejb.address.zmd />
		<ejb.address.zu />
	</properties>
	<repositories>
		<repository>
			<id>maven2-repository.dev.java.net</id>
			<name>Java.net Maven2 Repository</name>
			<url>http://download.java.net/maven/2</url>
		</repository>
		<repository>
			<id>maven2-repository-code.berkeleybop.org</id>
			<name>Berkeley Bioinformatics Open-source Projects Maven2 Repository</name>
			<url>http://code.berkeleybop.org/maven/repository/</url>
		</repository>
		<repository>
			<id>maven2-glassfish-repository</id>
			<name>Glassfish Maven2 Repository</name>
			<url>http://download.java.net/maven/glassfish</url>
		</repository>
		<repository>
			<id>repository.jboss.org</id>
			<name>JBoss Maven2 Repository</name>
			<url>https://repository.jboss.org/nexus/content/groups/public-jboss</url>
		</repository>
		<repository>
			<id>EclipseLink Repo</id>
			<name>EclipseLink Maven2 Repository</name>
			<url>http://www.eclipse.org/downloads/download.php?r=1&amp;nf=1&amp;file=/rt/eclipselink/maven.repo</url>
		</repository>
		<repository>
			<id>Apache.org</id>
			<name>Apache.org release repository</name>
			<url>https://repository.apache.org/content/repositories/releases/</url>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>maven2-repository.dev.java.net</id>
			<name>Java.net Maven2 Repository</name>
			<url>http://download.java.net/maven/2</url>
		</pluginRepository>
		<pluginRepository>
			<id>trojanbug.plugins</id>
			<name>Trojanbug Maven2 Repository</name>
			<url>https://propertymapper-maven-plugin.googlecode.com/svn/maven-repository</url>
		</pluginRepository>
	</pluginRepositories>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-ear-plugin</artifactId>
					<version>2.5</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>2.4.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>2.3.2</version>
					<configuration>
						<source>1.6</source>
						<target>1.6</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-ejb-plugin</artifactId>
					<version>2.3</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.9</version>
					<configuration>
						<argLine>-Djava.endorsed.dirs=${settings.localRepository}/org/glassfish/main/javaee-api/javax.annotation/${glassfish.version}/
							-Xms512m -Xmx1536m -XX:PermSize=128m -XX:MaxPermSize=256m</argLine>
					</configuration>
					<dependencies>
						<dependency>
							<groupId>org.glassfish.main.javaee-api</groupId>
							<artifactId>javax.annotation</artifactId>
							<version>${glassfish.version}</version>
						</dependency>
					</dependencies>
				</plugin>
				<plugin>
					<groupId>org.jvnet.jaxb2.maven2</groupId>
					<artifactId>maven-jaxb2-plugin</artifactId>
					<version>0.8.0</version>
					<configuration>
						<forceRegenerate>true</forceRegenerate>
						<args>
							<param>-npa</param>
						</args>
						<schemas>
							<schema>
								<fileset>
									<directory>${basedir}/src/main/schemas</directory>
									<includes>
										<include>*.*</include>
									</includes>
								</fileset>
							</schema>
						</schemas>
						<bindings>
							<binding>
								<fileset>
									<directory>${basedir}/src/main/jaxb-config</directory>
									<includes>
										<include>*.*</include>
									</includes>
								</fileset>
							</binding>
						</bindings>
					</configuration>
				</plugin>
				<plugin>
					<groupId>eu.trojanbug.maven.plugins</groupId>
					<artifactId>propertymapper-maven-plugin</artifactId>
					<configuration>
						<mappings>
							<mapping>
								<from>
									<name>wrdz\.version</name>
									<value>([0-9]+)\.([0-9]+)\.([0-9]+)(.*)</value>
								</from>
								<to>
									<name>testable.wrdz.version</name>
									<value>$1_$2_$3$4</value>
								</to>
							</mapping>
						</mappings>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<profiles>
		<profile>
			<id>read-properties</id>
			<build>
				<plugins>
					<plugin>
						<groupId>eu.trojanbug.maven.plugins</groupId>
						<artifactId>propertymapper-maven-plugin</artifactId>
						<configuration>
							<mappings>
								<mapping>
									<from>
										<name>(.*)\.remote\.address</name>
										<value>(.+)</value>
									</from>
									<to>
										<name>ejb.address.$1</name>
										<value>corbaname:iiop:$2#</value>
									</to>
								</mapping>
								<mapping>
									<from>
										<name>wrdz\.version</name>
										<value>([0-9]+)\.([0-9]+)\.([0-9]+)(.*)</value>
									</from>
									<to>
										<name>testable.wrdz.version</name>
										<value>$1_$2_$3$4</value>
									</to>
								</mapping>
							</mappings>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.glassfish.main.extras</groupId>
				<artifactId>glassfish-embedded-all</artifactId>
				<version>${glassfish.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-log4j12</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-codec</groupId>
				<artifactId>commons-codec</artifactId>
				<version>${commons-codec.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-configuration</groupId>
				<artifactId>commons-configuration</artifactId>
				<version>${commons-configuration.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons-io.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-lang</groupId>
				<artifactId>commons-lang</artifactId>
				<version>${commons-lang.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-net</groupId>
				<artifactId>commons-net</artifactId>
				<version>${commons-net.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-jexl</artifactId>
				<version>${commons-jexl.version}</version>
				<scope>runtime</scope>
			</dependency>
			<dependency>
				<groupId>com.jcraft</groupId>
				<artifactId>jsch</artifactId>
				<version>${jsch.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.httpcomponents</groupId>
				<artifactId>httpclient</artifactId>
				<version>${httpclient.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.httpcomponents</groupId>
				<artifactId>httpmime</artifactId>
				<version>${httpmime.version}</version>
			</dependency>
			<dependency>
				<groupId>javax.mail</groupId>
				<artifactId>javax.mail-api</artifactId>
				<version>${javaxmail.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.devicemap</groupId>
				<artifactId>devicemap-simpleddr</artifactId>
				<version>${devicemap-simpleddr.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.devicemap</groupId>
				<artifactId>devicemap-data</artifactId>
				<version>${devicemap-data.version}</version>
			</dependency>
			<dependency>
				<groupId>org.richfaces</groupId>
				<artifactId>richfaces-bom</artifactId>
				<version>${org.richfaces.bom.version}</version>
				<scope>import</scope>
				<type>pom</type>
			</dependency>
			<dependency>
				<groupId>net.sourceforge.owlapi</groupId>
				<artifactId>owlapi-api</artifactId>
				<version>${owlapi.version}</version>
			</dependency>
			<dependency>
				<groupId>net.sourceforge.owlapi</groupId>
				<artifactId>owlapi-apibinding</artifactId>
				<version>${owlapi.version}</version>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>dsa-api</artifactId>
				<version>${dsa.version}</version>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>sra-api</artifactId>
				<version>${sra.version}</version>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-persistence</artifactId>
				<version>${wrdz.version}</version>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-common-business</artifactId>
				<version>${wrdz.version}</version>
				<type>ejb</type>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-common-business</artifactId>
				<version>${wrdz.version}</version>
				<scope>test</scope>
				<type>test-jar</type>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-common-common</artifactId>
				<version>${wrdz.version}</version>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-common-common</artifactId>
				<version>${wrdz.version}</version>
				<scope>test</scope>
				<type>test-jar</type>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-common-dao</artifactId>
				<version>${wrdz.version}</version>
				<type>ejb</type>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-common-entity</artifactId>
				<version>${wrdz.version}</version>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-common-interfaces</artifactId>
				<version>${wrdz.version}</version>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-common-rest</artifactId>
				<version>${wrdz.version}</version>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-common-web</artifactId>
				<version>${wrdz.version}</version>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-mdz-business</artifactId>
				<version>${wrdz.version}</version>
				<type>ejb</type>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-mdz-common</artifactId>
				<version>${wrdz.version}</version>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-mdz-dao</artifactId>
				<version>${wrdz.version}</version>
				<type>ejb</type>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-mdz-entity</artifactId>
				<version>${wrdz.version}</version>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-mdz-interfaces</artifactId>
				<version>${wrdz.version}</version>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-mdz-plugin-api</artifactId>
				<version>${wrdz.version}</version>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-ms-business</artifactId>
				<version>${wrdz.version}</version>
				<type>ejb</type>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-ms-common</artifactId>
				<version>${wrdz.version}</version>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-ms-dao</artifactId>
				<version>${wrdz.version}</version>
				<type>ejb</type>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-ms-entity</artifactId>
				<version>${wrdz.version}</version>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-ms-interfaces</artifactId>
				<version>${wrdz.version}</version>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-ms-web</artifactId>
				<version>${wrdz.version}</version>
				<type>war</type>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-ru-business</artifactId>
				<version>${wrdz.version}</version>
				<type>ejb</type>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-ru-common</artifactId>
				<version>${wrdz.version}</version>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-ru-dao</artifactId>
				<version>${wrdz.version}</version>
				<type>ejb</type>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-ru-entity</artifactId>
				<version>${wrdz.version}</version>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-ru-interfaces</artifactId>
				<version>${wrdz.version}</version>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-ru-rest</artifactId>
				<version>${wrdz.version}</version>
				<type>war</type>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-ru-web</artifactId>
				<version>${wrdz.version}</version>
				<type>war</type>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-zmd-business</artifactId>
				<version>${wrdz.version}</version>
				<type>ejb</type>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-zmd-common</artifactId>
				<version>${wrdz.version}</version>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-zmd-dao</artifactId>
				<version>${wrdz.version}</version>
				<type>ejb</type>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-zmd-entity</artifactId>
				<version>${wrdz.version}</version>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-zmd-interfaces</artifactId>
				<version>${wrdz.version}</version>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-zmd-rest</artifactId>
				<version>${wrdz.version}</version>
				<type>war</type>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-zmd-scape</artifactId>
				<version>${wrdz.version}</version>
				<type>war</type>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-zmd-web</artifactId>
				<version>${wrdz.version}</version>
				<type>war</type>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-zmkd-business</artifactId>
				<version>${wrdz.version}</version>
				<type>ejb</type>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-zmkd-common</artifactId>
				<version>${wrdz.version}</version>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-zmkd-dao</artifactId>
				<version>${wrdz.version}</version>
				<type>ejb</type>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-zmkd-entity</artifactId>
				<version>${wrdz.version}</version>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-zmkd-interfaces</artifactId>
				<version>${wrdz.version}</version>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-zmkd-web</artifactId>
				<version>${wrdz.version}</version>
				<type>war</type>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-zmkd-zdt</artifactId>
				<version>${wrdz.version}</version>
				<type>war</type>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-zu-business</artifactId>
				<version>${wrdz.version}</version>
				<type>ejb</type>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-zu-common</artifactId>
				<version>${wrdz.version}</version>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-zu-dao</artifactId>
				<version>${wrdz.version}</version>
				<type>ejb</type>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-zu-entity</artifactId>
				<version>${wrdz.version}</version>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-zu-interfaces</artifactId>
				<version>${wrdz.version}</version>
			</dependency>
			<dependency>
				<groupId>pl.psnc.synat</groupId>
				<artifactId>wrdz-zu-web</artifactId>
				<version>${wrdz.version}</version>
				<type>war</type>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>